# lab-core

./: README.md  pyproject.toml  requirements.txt
RLbasic/: README.md  make_gridworld_step_notebooks.py  make_mdp_notebooks.py
examples/: README.md
examples/notebooks/: README.md  arm_kinematics.ipynb  bandit_lecture.ipynb  cliff_walking_lecture.ipynb  diff_drive.ipynb  dp_gridworld.ipynb  dqn_cartpole.ipynb  gridworld_step_exercise.ipynb  kmeans_gmm.ipynb  logistic_regression.ipynb  mlp_backprop.ipynb  pca.ipynb  polynomial_regression.ipynb  reinforce_cartpole.ipynb
src/: README.md
src/cpai_lab/: README.md  __init__.py
src/cpai_lab/agents/: README.md  __init__.py  bandit.py  td.py
src/cpai_lab/envs/: README.md  __init__.py
src/cpai_lab/policies/: README.md  __init__.py  boltzmann.py  epsilon_greedy.py  ucb.py
src/cpai_lab/utils/: README.md  __init__.py  plotting.py
